fix: remove overflowing boxes
these made ios not fit on page

--- a/public/resources/css/index.css
+++ b/public/resources/css/index.css
@@ -3520,16 +3520,16 @@ body {
         width: calc(100vw / 3 - 85px);
     }
 
-    .slayer-containers, .race-containers, .floor-containers{
+    .slayer-containers,
+    .race-containers,
+    .floor-containers {
+        white-space: nowrap;
         overflow-x: auto;
-        margin-left: -40px;
-        margin-right: -40px;
-        padding-left: 40px;
+        margin-left: -30px;
+        margin-right: -30px;
+        padding-left: 30px;
+        padding-right: 30px;
         padding-bottom: 20px;
-    }
-
-    .race-containers .narrow-info-container:last-child, .slayer-containers .narrow-info-container:last-child, .floor-containers .narrow-info-container:last-child{
-        margin-right: 40px;
     }
 }
 
@@ -3553,16 +3553,14 @@ body {
         padding-left: 30px;
     }
 
-    .collections{
+    .collections,
+    .sea-creatures {
         white-space: nowrap;
         overflow-x: auto;
-        margin-left: -40px;
-        margin-right: -40px;
+        margin-left: -30px;
+        margin-right: -30px;
         padding-left: 30px;
-    }
-
-    .collection:last-child{
-        margin-right: 30px;
+        padding-right: 30px;
     }
 
     .nav-item:not(.active):hover::after{
@@ -3607,20 +3605,8 @@ body {
         margin-right: 20px;
     }
 
-    .sea-creatures{
-        white-space: nowrap;
-        overflow-x: auto;
-        margin-left: -40px;
-        margin-right: -40px;
-        padding-left: 40px;
-    }
-
     .sea-creature-name{
         white-space: break-spaces;
-    }
-
-    .sea-creature:last-child{
-        margin-right: 40px;
     }
 
     .top-deaths{
